--- a/src/app/view/game/game.component.html
+++ b/src/app/view/game/game.component.html
@@ -1,9 +1,63 @@
-<app-section title="First Presidency" [openPanels]="openPanels">
-  <app-section-card [openPanels]="openPanels">
-    <app-question
-      text="Who is speaking Sunday Morning Session?"
-      answerType="typeahead"
-      [answers]="answersService.firstPresidency()"
-    ></app-question>
-  </app-section-card>
-</app-section>
+<app-section
+  title="When is the First Presidency speaking?"
+  [isOpen]="openPanels.firstPresidency"
+  (click)="openPanels.firstPresidency = !openPanels.firstPresidency"
+></app-section>
+
+<ng-template [ngIf]="openPanels.firstPresidency">
+  <app-question
+    text="In which session is President Russell M. Nelson speaking?"
+    id="1"
+    answerType="typeahead"
+    [answers]="answersService.conferenceSessions()"
+    [countOfAnswers]="3"
+  ></app-question>
+
+  <app-question
+    text="In which session is President Dallin H. Oaks speaking?"
+    id="2"
+    answerType="typeahead"
+    [answers]="answersService.conferenceSessions()"
+    [countOfAnswers]="2"
+  ></app-question>
+
+  <app-question
+    text="In which session is President Heny B. Eyring speaking?"
+    id="3"
+    answerType="typeahead"
+    [answers]="answersService.conferenceSessions()"
+    [countOfAnswers]="2"
+  ></app-question>
+</ng-template>
+
+<app-section
+  title="Who's Conducting?"
+  [isOpen]="openPanels.whosConducting"
+  (click)="openPanels.whosConducting = !openPanels.whosConducting"
+></app-section>
+
+<ng-template [ngIf]="openPanels.whosConducting">
+  <app-question
+    text="In which sessions is President Russell M. Nelson conducting?"
+    id="4"
+    answerType="typeahead"
+    [answers]="answersService.conferenceSessions()"
+    [countOfAnswers]="2"
+  ></app-question>
+
+  <app-question
+    text="In which session is President Dallin H. Oaks conducting?"
+    id="5"
+    answerType="typeahead"
+    [answers]="answersService.conferenceSessions()"
+    [countOfAnswers]="2"
+  ></app-question>
+
+  <app-question
+    text="In which session is President Heny B. Eyring conducting?"
+    id="6"
+    answerType="typeahead"
+    [answers]="answersService.conferenceSessions()"
+    [countOfAnswers]="2"
+  ></app-question>
+</ng-template>
