--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,2 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/scss/bootstrap.scss'
+$fa-font-path: "../node_modules/@fortawesome/fontawesome-free/webfonts"
+@import '../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss'
+@import '../node_modules/@fortawesome/fontawesome-free/scss/solid.scss'
+
+html, body
+  height: 100%
