--- a/src/app/view/login/login.component.html
+++ b/src/app/view/login/login.component.html
@@ -1,1 +1,21 @@
-<p>login works!</p>
+<form (onSubmit)="login()">
+  <div class="form-group">
+    <label for="email">Email address</label>
+    <input type="email" class="form-control" id="email" placeholder="Email" />
+    <small id="emailHelp" class="form-text text-muted"
+      >We'll never share your email with anyone else.</small
+    >
+  </div>
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input
+      type="password"
+      class="form-control"
+      id="password"
+      placeholder="Password"
+    />
+  </div>
+  <button type="submit" class="btn btn-primary">Login</button>
+  <br />
+  <a routerLink="/login/register">Register</a>
+</form>
