--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3,6 +3,7 @@
 $fa-font-path: "../node_modules/@fortawesome/fontawesome-free/webfonts"
 @import '../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss'
 @import '../node_modules/@fortawesome/fontawesome-free/scss/solid.scss'
+@import url('https://fonts.googleapis.com/css?family=Great+Vibes&display=swap')
 
 html, body
   height: 100%
