--- a/src/app/view/login/login.component.html
+++ b/src/app/view/login/login.component.html
@@ -1,21 +1,32 @@
-<form (onSubmit)="login()">
-  <div class="form-group">
-    <label for="email">Email address</label>
-    <input type="email" class="form-control" id="email" placeholder="Email" />
-    <small id="emailHelp" class="form-text text-muted"
-      >We'll never share your email with anyone else.</small
-    >
-  </div>
-  <div class="form-group">
-    <label for="password">Password</label>
-    <input
-      type="password"
-      class="form-control"
-      id="password"
-      placeholder="Password"
-    />
-  </div>
-  <button type="submit" class="btn btn-primary">Login</button>
-  <br />
-  <a routerLink="/login/register">Register</a>
+<form (ngSubmit)="login()">
+  <fieldset [disabled]="loading">
+    <div class="form-group">
+      <label for="username">Username</label>
+      <input
+        type="text"
+        class="form-control"
+        id="username"
+        name="username"
+        placeholder="Username"
+        [(ngModel)]="username"
+      />
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input
+        type="password"
+        class="form-control"
+        id="password"
+        name="password"
+        placeholder="Password"
+        [(ngModel)]="password"
+      />
+      <small *ngIf="loginFailed" id="loginFailed" class="form-text text-danger"
+        >Username and password combination is incorrect</small
+      >
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
+    <br />
+    <a routerLink="/login/register">Register</a>
+  </fieldset>
 </form>
