--- a/src/app/view/register/register.component.html
+++ b/src/app/view/register/register.component.html
@@ -1,20 +1,27 @@
 <form>
   <div class="form-group">
     <label for="username">Pick a Username</label>
-    <input
+    <input #username
       type="text"
       class="form-control"
       id="username"
       placeholder="username"
+      (keyup.enter)="setUsername(username.value)"
+      (blur)="setUsername(username.value)"
     />
-  </div>
+    <small *ngIf="nameFailed" id="nameFailed" class="form-text text-danger"
+    >Username must not be blank</small
+  >
+</div>
   <div class="form-group">
     <label for="password">Password</label>
-    <input
-      type="new-password"
+    <input #password
+      type="password"
       class="form-control"
       id="password"
       placeholder="Password"
+      (keyup.enter)="setPassword(password.value)"
+      (blur)="setPassword(password.value)"
     />
     <small id="passwordHelp" class="form-text text-muted"
       >Do <b>not</b> use the same password as your bank.</small
@@ -22,14 +29,19 @@
   </div>
   <div class="form-group">
     <label for="confirm-password">Confirm password</label>
-    <input
-      type="new-password"
+    <input #confirmPassword
+      type="password"
       class="form-control"
       id="confirm-password"
       placeholder="Password"
+      (keyup.enter)="setConfirmPassword(confirmPassword.value)"
+      (blur)="setConfirmPassword(confirmPassword.value)"
     />
   </div>
-  <button type="submit" class="btn btn-primary">Register</button>
+  <button type="submit" class="btn btn-primary" (click)="register()">Register</button>
+  <small *ngIf="regFailed" id="regFailed" class="form-text text-danger"
+        >Passwords do not match -- or are blank</small
+      >
   <br />
   <a routerLink="/login">I already have a login</a>
 </form>
