--- a/src/app/model/question/question.component.html
+++ b/src/app/model/question/question.component.html
@@ -25,7 +25,7 @@
       (click)="removeAnswer(answer)"
       [class.badge-primary]="enabled"
     >
-      {{ answer }} <i class="fa fas fa-trash"></i>
+      {{ answer }} <i class="fas fa-trash"></i>
     </span>
   </div>
 </ng-template>
