--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,2 +1,10 @@
 :host
   margin: 15px
+
+.toast-container
+  position: fixed
+  z-index: 1
+  top: 15px
+  right: 15px
+  width: 350px
+  max-width: 100%
