--- a/src/app/view/login/login.component.html
+++ b/src/app/view/login/login.component.html
@@ -1,32 +1,52 @@
-<form (ngSubmit)="login()">
-  <fieldset [disabled]="loading">
-    <div class="form-group">
-      <label for="username">Username</label>
-      <input
-        type="text"
-        class="form-control"
-        id="username"
-        name="username"
-        placeholder="Username"
-        [(ngModel)]="username"
-      />
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input
-        type="password"
-        class="form-control"
-        id="password"
-        name="password"
-        placeholder="Password"
-        [(ngModel)]="password"
-      />
-      <small *ngIf="loginFailed" id="loginFailed" class="form-text text-danger"
-        >Username and password combination is incorrect</small
+<div *ngIf="loading; else notLoading" class="d-flex justify-content-center">
+    <div class="spinner-border" style="width: 12rem; height: 12rem;" role="status">
+
+      </div>
+</div>
+
+<ng-template #notLoading>
+  <form (ngSubmit)="login()" novalidate>
+    <fieldset [disabled]="loading">
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input
+          type="text"
+          class="form-control"
+          id="username"
+          name="username"
+          placeholder="Username"
+          [(ngModel)]="username"
+          autocomplete="new-password"
+        />
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input
+          type="password"
+          class="form-control"
+          id="password"
+          name="password"
+          placeholder="Password"
+          [(ngModel)]="password"
+          autocomplete="current-password"
+        />
+        <small
+          *ngIf="loginFailed"
+          id="loginFailed"
+          class="form-text text-danger"
+          >Username and password combination is incorrect</small
+        >
+      </div>
+      <button
+        type="submit"
+        class="btn btn-primary"
+        [disabled]="!validCredentials()"
       >
+        Login
+      </button>
+    </fieldset>
+    <div class="register-link">
+        <a routerLink="/login/register">Register</a>
     </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-    <br />
-    <a routerLink="/login/register">Register</a>
-  </fieldset>
-</form>
+  </form>
+</ng-template>
