--- a/src/app/model/question/question.component.html
+++ b/src/app/model/question/question.component.html
@@ -1,5 +1,5 @@
 <label for="typeahead-basic">
-  {{ text }}<br>
+  {{ text }}<br />
   <small>Maximum number of guesses: {{ countOfAnswers }}</small>
 </label>
 <input
