--- a/src/app/view/login/login.component.html
+++ b/src/app/view/login/login.component.html
@@ -1,7 +1,9 @@
 <div *ngIf="loading; else notLoading" class="d-flex justify-content-center">
-    <div class="spinner-border" style="width: 12rem; height: 12rem;" role="status">
-
-      </div>
+  <div
+    class="spinner-border"
+    style="width: 12rem; height: 12rem;"
+    role="status"
+  ></div>
 </div>
 
 <ng-template #notLoading>
@@ -46,7 +48,7 @@
       </button>
     </fieldset>
     <div class="register-link">
-        <a routerLink="/login/register">Register</a>
+      <a routerLink="/login/register">Register</a>
     </div>
   </form>
 </ng-template>
