--- a/src/app/view/util/valid-text/valid-text.component.html
+++ b/src/app/view/util/valid-text/valid-text.component.html
@@ -1,7 +1,2 @@
-<i
-        class="fa-check-circle"
-        [ngClass]="valid ? 'fas' : 'far'"
-      ></i>&nbsp;
-      <span [class.text-strikethrough]="valid"
-        >{{text}}</span
-      >
+<i class="fa-check-circle" [ngClass]="valid ? 'fas' : 'far'"></i>&nbsp;
+<span [class.text-strikethrough]="valid">{{ text }}</span>
