--- a/src/app/view/chat/chat.component.html
+++ b/src/app/view/chat/chat.component.html
@@ -1,1 +1,17 @@
-<p>chat works!</p>
+<div *ngIf="loading; else notLoading" class="d-flex justify-content-center">
+  <div
+    class="spinner-border"
+    style="width: 12rem; height: 12rem;"
+    role="status"
+  ></div>
+</div>
+
+<ng-template #notLoading>
+  <div class="chat-container">
+    <div *ngFor="let chat of chats">
+      <b
+        >{{ chat.user.username }} <span>{{ chat.user.family.name }}</span></b
+      >&nbsp;{{ chat.message }}
+    </div>
+  </div>
+</ng-template>
