Got questions picked out.

--- a/src/app/model/question/question.component.html
+++ b/src/app/model/question/question.component.html
@@ -1,5 +1,6 @@
 <label for="typeahead-basic">
   {{ text }}<br />
+  <small>Point value: ??</small>
   <small>Maximum number of guesses: {{ countOfAnswers }}</small>
 </label>
 <input
