--- a/src/app/view/game/game.component.html
+++ b/src/app/view/game/game.component.html
@@ -1,3 +1,23 @@
+<div>
+  <h4>How to play?</h4>
+  <p>
+    It is pretty easy. Open one of the sections below and start putting in your
+    guesses to the questions. If you start typing in any of the questions,
+    possible answers will be displayed. You can also type any answer you want.
+  </p>
+  <p>
+    When General Conference starts, some of the questions will lock and you will
+    no longer be able to put in guesses. If you guessed correctly, you will get
+    points. The person or team (also called a family) with the most poitns wins.
+  </p>
+  <p>
+    <b>Pro Tip: </b>Some of the questions will still be open during sessions.
+    Example: You can change your answers if you see someone speak in an earlier
+    session and had previously guessed that person would speak in a later
+    session.
+  </p>
+</div>
+
 <div *ngIf="loading; else notLoading" class="d-flex justify-content-center">
   <div
     class="spinner-border"
@@ -15,7 +35,7 @@
 
   <ng-template [ngIf]="openPanels.firstPresidency">
     <app-question
-      text="In which session is President Russell M. Nelson speaking?"
+      text="In which session(s) is President Russell M. Nelson speaking?"
       id="1"
       answerType="typeahead"
       [answers]="answersService.conferenceSessions()"
@@ -23,7 +43,7 @@
     ></app-question>
 
     <app-question
-      text="In which session is President Dallin H. Oaks speaking?"
+      text="In which session(s) is President Dallin H. Oaks speaking?"
       id="2"
       answerType="typeahead"
       [answers]="answersService.conferenceSessions()"
@@ -31,7 +51,7 @@
     ></app-question>
 
     <app-question
-      text="In which session is President Heny B. Eyring speaking?"
+      text="In which session(s) is President Heny B. Eyring speaking?"
       id="3"
       answerType="typeahead"
       [answers]="answersService.conferenceSessions()"
@@ -47,28 +67,295 @@
 
   <ng-template [ngIf]="openPanels.whosConducting">
     <app-question
-      text="In which sessions is President Russell M. Nelson conducting?"
-      id="4"
+      text="In which sessions(s) is President Russell M. Nelson conducting?"
+      id="11"
       answerType="typeahead"
       [answers]="answersService.conferenceSessions()"
       [countOfAnswers]="2"
     ></app-question>
 
     <app-question
-      text="In which session is President Dallin H. Oaks conducting?"
-      id="5"
+      text="In which session(s) is President Dallin H. Oaks conducting?"
+      id="12"
       answerType="typeahead"
       [answers]="answersService.conferenceSessions()"
       [countOfAnswers]="2"
     ></app-question>
 
     <app-question
-      text="In which session is President Heny B. Eyring conducting?"
-      id="6"
+      text="In which session(s) is President Heny B. Eyring conducting?"
+      id="13"
       answerType="typeahead"
       [answers]="answersService.conferenceSessions()"
       [countOfAnswers]="2"
     ></app-question>
   </ng-template>
 </ng-template>
+
+<app-section
+  title="When are the Apostles Speaking?"
+  [isOpen]="openPanels.apostlesSpeaking"
+  (click)="openPanels.apostlesSpeaking = !openPanels.apostlesSpeaking"
+></app-section>
+
+<ng-template [ngIf]="openPanels.apostlesSpeaking">
+  <app-question
+    text="Which Apostle(s) are speaking in the Saturday Morning Session?"
+    id="21"
+    answerType="typeahead"
+    [answers]="answersService.apostles()"
+    [countOfAnswers]="3"
+  ></app-question>
+  <app-question
+    text="Which Apostle(s) are speaking in the Saturday Afternoon Session?"
+    id="22"
+    answerType="typeahead"
+    [answers]="answersService.apostles()"
+    [countOfAnswers]="3"
+  ></app-question>
+  <app-question
+    text="Which Apostle(s) are speaking in the Sunday Morning Session?"
+    id="23"
+    answerType="typeahead"
+    [answers]="answersService.apostles()"
+    [countOfAnswers]="3"
+  ></app-question>
+  <app-question
+    text="Which Apostle(s) are speaking in the Sunday Afternoon Session?"
+    id="24"
+    answerType="typeahead"
+    [answers]="answersService.apostles()"
+    [countOfAnswers]="3"
+  ></app-question>
+</ng-template>
+
+<app-section
+  title="Auxiliaries and Seventies"
+  [isOpen]="openPanels.auxAndSeventies"
+  (click)="openPanels.auxAndSeventies = !openPanels.auxAndSeventies"
+></app-section>
+
+<ng-template [ngIf]="openPanels.auxAndSeventies">
+  <app-question
+    text="Who of the Quorums of the Seventies will be speaking in any session? (Pick ten)"
+    id="31"
+    answerType="typeahead"
+    [answers]="answersService.seventies()"
+    [countOfAnswers]="10"
+  ></app-question>
+  <app-question
+    text="Who of the Presiding Bishopric will be speaking in any session?"
+    id="32"
+    answerType="typeahead"
+    [answers]="answersService.presidingBishopric()"
+    [countOfAnswers]="1"
+  ></app-question>
+  <app-question
+    text="Who of the Relief Society Presidency will be speaking in any session?"
+    id="33"
+    answerType="typeahead"
+    [answers]="answersService.reliefSocietyPresidency()"
+    [countOfAnswers]="1"
+  ></app-question>
+  <app-question
+    text="Who of the Young Men's Presidency will be speaking in any session?"
+    id="34"
+    answerType="typeahead"
+    [answers]="answersService.youngMensPresidency()"
+    [countOfAnswers]="1"
+  ></app-question>
+  <app-question
+    text="Who of the Young Women's Presidency will be speaking in any session?"
+    id="35"
+    answerType="typeahead"
+    [answers]="answersService.youndWomensPresidency()"
+    [countOfAnswers]="1"
+  ></app-question>
+  <app-question
+    text="Who of the Sunday School Presidency will be speaking in any session?"
+    id="36"
+    answerType="typeahead"
+    [answers]="answersService.sundaySchoolPresidency()"
+    [countOfAnswers]="1"
+  ></app-question>
+  <app-question
+    text="Who of the Primary Presidency will be speaking in any session?"
+    id="37"
+    answerType="typeahead"
+    [answers]="answersService.primaryPresidency()"
+    [countOfAnswers]="1"
+  ></app-question>
+</ng-template>
+
+<app-section
+  title="Hymns and the Choir"
+  [isOpen]="openPanels.hymnsAndChoir"
+  (click)="openPanels.hymnsAndChoir = !openPanels.hymnsAndChoir"
+></app-section>
+
+<ng-template [ngIf]="openPanels.hymnsAndChoir">
+  <app-question
+    text="Which hymns will be sung in any session? (Pick ten)"
+    id="41"
+    answerType="typeahead"
+    [answers]="answersService.hymnsAndSongs()"
+    [countOfAnswers]="10"
+  ></app-question>
+
+  <app-question
+    text="What colors will the chor be wearing Saturday Morning Session? (Dresses, Suits or Ties)"
+    id="42"
+    answerType="typeahead"
+    [answers]="answersService.colors()"
+    [countOfAnswers]="2"
+  ></app-question>
+  <app-question
+    text="What colors will the chor be wearing Saturday Afternoon Session? (Dresses, Suits or Ties)"
+    id="43"
+    answerType="typeahead"
+    [answers]="answersService.colors()"
+    [countOfAnswers]="2"
+  ></app-question>
+  <app-question
+    text="What colors will the chor be wearing General Women's Session? (Dresses)"
+    id="44"
+    answerType="typeahead"
+    [answers]="answersService.colors()"
+    [countOfAnswers]="2"
+  ></app-question>
+  <app-question
+    text="What colors will the chor be wearing Sunday Morning Session? (Dresses, Suits or Ties)"
+    id="45"
+    answerType="typeahead"
+    [answers]="answersService.colors()"
+    [countOfAnswers]="2"
+  ></app-question>
+  <app-question
+    text="What colors will the chor be wearing Sunday Afternoon Session? (Dresses, Suits or Ties)"
+    id="46"
+    answerType="typeahead"
+    [answers]="answersService.colors()"
+    [countOfAnswers]="2"
+  ></app-question>
+</ng-template>
+
+<app-section
+  title="Tie Colors"
+  [isOpen]="openPanels.tieColors"
+  (click)="openPanels.tieColors = !openPanels.tieColors"
+></app-section>
+
+<ng-template [ngIf]="openPanels.tieColors">
+  <app-question
+    text="What will President Russell M. Nelson's tie color be in the Saturday Morning Session?"
+    id="51"
+    answerType="typeahead"
+    [answers]="answersService.colors()"
+    [countOfAnswers]="1"
+  ></app-question>
+  <app-question
+    text="What will President Russell M. Nelson's tie color be in the Saturday Afternoon Session?"
+    id="52"
+    answerType="typeahead"
+    [answers]="answersService.colors()"
+    [countOfAnswers]="1"
+  ></app-question>
+  <app-question
+    text="What will President Russell M. Nelson's tie color be in the Sunday Morning Session?"
+    id="53"
+    answerType="typeahead"
+    [answers]="answersService.colors()"
+    [countOfAnswers]="1"
+  ></app-question>
+  <app-question
+    text="What will President Russell M. Nelson's tie color be in the Sunday Afternoon Session?"
+    id="54"
+    answerType="typeahead"
+    [answers]="answersService.colors()"
+    [countOfAnswers]="1"
+  ></app-question>
+
+  <app-question
+    text="What will President Dallin H. Oaks's tie color be in the Saturday Morning Session?"
+    id="55"
+    answerType="typeahead"
+    [answers]="answersService.colors()"
+    [countOfAnswers]="1"
+  ></app-question>
+  <app-question
+    text="What will President Dallin H. Oaks's tie color be in the Saturday Afternoon Session?"
+    id="56"
+    answerType="typeahead"
+    [answers]="answersService.colors()"
+    [countOfAnswers]="1"
+  ></app-question>
+  <app-question
+    text="What will President Dallin H. Oaks's tie color be in the Sunday Morning Session?"
+    id="57"
+    answerType="typeahead"
+    [answers]="answersService.colors()"
+    [countOfAnswers]="1"
+  ></app-question>
+  <app-question
+    text="What will President Dallin H. Oaks's tie color be in the Sunday Afternoon Session?"
+    id="58"
+    answerType="typeahead"
+    [answers]="answersService.colors()"
+    [countOfAnswers]="1"
+  ></app-question>
+
+  <app-question
+    text="What will President Heny B. Eyring's tie color be in the Saturday Morning Session?"
+    id="59"
+    answerType="typeahead"
+    [answers]="answersService.colors()"
+    [countOfAnswers]="1"
+  ></app-question>
+  <app-question
+    text="What will President Heny B. Eyring's tie color be in the Saturday Afternoon Session?"
+    id="60"
+    answerType="typeahead"
+    [answers]="answersService.colors()"
+    [countOfAnswers]="1"
+  ></app-question>
+  <app-question
+    text="What will President Heny B. Eyring's tie color be in the Sunday Morning Session?"
+    id="61"
+    answerType="typeahead"
+    [answers]="answersService.colors()"
+    [countOfAnswers]="1"
+  ></app-question>
+  <app-question
+    text="What will President Heny B. Eyring's tie color be in the Sunday Afternoon Session?"
+    id="62"
+    answerType="typeahead"
+    [answers]="answersService.colors()"
+    [countOfAnswers]="1"
+  ></app-question>
+</ng-template>
+
+<app-section
+  title="New Temple Locations"
+  [isOpen]="openPanels.newTempleLocations"
+  (click)="openPanels.newTempleLocations = !openPanels.newTempleLocations"
+></app-section>
+
+<ng-template [ngIf]="openPanels.newTempleLocations">
+  <app-question
+    text="In which states in the U.S.A. will new temples be built?"
+    id="71"
+    answerType="typeahead"
+    [answers]="answersService.usaStates()"
+    [countOfAnswers]="5"
+  ></app-question>
+
+  <app-question
+    text="In which countries will new temples be built? (Not including U.S.A.)"
+    id="72"
+    answerType="typeahead"
+    [answers]="answersService.countriesNotAmerica()"
+    [countOfAnswers]="5"
+  ></app-question>
+</ng-template>
+
 <app-chat></app-chat>
