--- a/src/app/view/register/register.component.html
+++ b/src/app/view/register/register.component.html
@@ -19,14 +19,14 @@
       </small>
     </div>
     <div class="form-group">
-      <label for="family">Family Name</label>
+      <label for="family">Family Name (Team Name)</label>
       <input
         type="search"
         class="form-control"
         id="family"
         name="family"
         [(ngModel)]="family"
-        placeholder="Pick a family name"
+        placeholder="Pick a family name or create a new one"
         autocomplete="false"
         [ngbTypeahead]="searchFamilies"
       />
@@ -36,6 +36,9 @@
           text="Must be 4 characters long."
         ></app-valid-text>
       </small>
+      <small class="form-text text-muted"
+        >You <b>cannot</b> change teams after registering.</small
+      >
     </div>
     <div class="form-group">
       <label for="password">Password</label>
