Ready for Prod.

--- a/src/app/model/question/question.component.html
+++ b/src/app/model/question/question.component.html
@@ -1,6 +1,6 @@
 <label for="typeahead-basic">
   {{ text }}<br />
-  <small>Point value: ??</small>
+  <small>Point value for each correct answer: ??</small>&nbsp;
   <small>Maximum number of guesses: {{ countOfAnswers }}</small>
 </label>
 <input
