--- a/src/app/view/chat/chat.component.sass
+++ b/src/app/view/chat/chat.component.sass
@@ -3,9 +3,12 @@
   padding: 15px
   border: 1px solid black
 
+@media (min-width: 768px)
+  .chat-container
+    margin: 10px 0
+
 .chat-values
   min-height: 100px
   max-height: 300px
   overflow-y: scroll
   scroll-behavior: smooth
-
