--- a/src/app/view/nav-header/nav-header.component.sass
+++ b/src/app/view/nav-header/nav-header.component.sass
@@ -23,7 +23,7 @@ p
   &:not(:hover) .logout
     display: none
 
-  .autheticated-user
+  .authenticated-user
     margin-right: 5px
     text-align: center
 
