--- a/src/app/view/register/register.component.html
+++ b/src/app/view/register/register.component.html
@@ -63,7 +63,7 @@
       </small>
     </div>
     <div class="form-group">
-      <label for="confirm-password">Confirm password</label>
+      <label for="confirmPassword">Confirm password</label>
       <input
         type="password"
         class="form-control"
