--- a/src/app/view/game/game.component.html
+++ b/src/app/view/game/game.component.html
@@ -8,7 +8,7 @@
   <p>
     When General Conference starts, some of the questions will lock and you will
     no longer be able to put in guesses. If you guessed correctly, you will get
-    points. The person or team (also called a family) with the most poitns wins.
+    points. The person or team (also called a family) with the most points wins.
   </p>
   <p>
     <b>Pro Tip: </b>Some of the questions will still be open during sessions.
