--- a/src/app/view/chat/chat.component.sass
+++ b/src/app/view/chat/chat.component.sass
@@ -3,7 +3,7 @@
   padding: 15px
   border: 1px solid black
 
-@media (min-width: 768px)
+@media (max-width: 767px)
   .chat-container
     margin: 10px 0
 
