Got Scores Working.

--- a/src/app/view/game/game.component.html
+++ b/src/app/view/game/game.component.html
@@ -9,6 +9,7 @@
     When General Conference starts, some of the questions will lock and you will
     no longer be able to put in guesses. If you guessed correctly, you will get
     points. The person or team (also called a family) with the most points wins.
+    See your score down below.
   </p>
   <p>
     <b>Pro Tip: </b>Some of the questions will still be open during sessions.
@@ -366,3 +367,4 @@
 </ng-template>
 
 <app-chat></app-chat>
+<app-scoreboard></app-scoreboard>
