--- a/src/app/view/game/game.component.html
+++ b/src/app/view/game/game.component.html
@@ -166,14 +166,14 @@
     [countOfAnswers]="1"
   ></app-question>
   <app-question
-    text="Who of the Young Men's Presidency will be speaking in any session?"
+    text="Who of the Young Men Presidency will be speaking in any session?"
     id="34"
     answerType="typeahead"
     [answers]="answersService.youngMensPresidency()"
     [countOfAnswers]="1"
   ></app-question>
   <app-question
-    text="Who of the Young Women's Presidency will be speaking in any session?"
+    text="Who of the Young Women Presidency will be speaking in any session?"
     id="35"
     answerType="typeahead"
     [answers]="answersService.youndWomensPresidency()"
@@ -211,35 +211,35 @@
   ></app-question>
 
   <app-question
-    text="What colors will the chor be wearing Saturday Morning Session? (Dresses, Suits or Ties)"
+    text="What colors will the choir be wearing Saturday Morning Session? (Dresses, Suits or Ties)"
     id="42"
     answerType="typeahead"
     [answers]="answersService.colors()"
     [countOfAnswers]="2"
   ></app-question>
   <app-question
-    text="What colors will the chor be wearing Saturday Afternoon Session? (Dresses, Suits or Ties)"
+    text="What colors will the choir be wearing Saturday Afternoon Session? (Dresses, Suits or Ties)"
     id="43"
     answerType="typeahead"
     [answers]="answersService.colors()"
     [countOfAnswers]="2"
   ></app-question>
   <app-question
-    text="What colors will the chor be wearing General Women's Session? (Dresses)"
+    text="What colors will the choir be wearing General Women's Session? (Dresses)"
     id="44"
     answerType="typeahead"
     [answers]="answersService.colors()"
     [countOfAnswers]="2"
   ></app-question>
   <app-question
-    text="What colors will the chor be wearing Sunday Morning Session? (Dresses, Suits or Ties)"
+    text="What colors will the choir be wearing Sunday Morning Session? (Dresses, Suits or Ties)"
     id="45"
     answerType="typeahead"
     [answers]="answersService.colors()"
     [countOfAnswers]="2"
   ></app-question>
   <app-question
-    text="What colors will the chor be wearing Sunday Afternoon Session? (Dresses, Suits or Ties)"
+    text="What colors will the choir be wearing Sunday Afternoon Session? (Dresses, Suits or Ties)"
     id="46"
     answerType="typeahead"
     [answers]="answersService.colors()"
