--- a/src/app/view/chat/chat.component.html
+++ b/src/app/view/chat/chat.component.html
@@ -26,7 +26,7 @@
           [(ngModel)]="chatValue"
         />
         <div class="input-group-append">
-          <button class="btn btn-outline-secondary" type="button">
+          <button class="btn btn-outline-secondary" type="submit">
             <i class="far fa-comment-dots"></i>
           </button>
         </div>
