--- a/src/app/view/scoreboard/scoreboard.component.html
+++ b/src/app/view/scoreboard/scoreboard.component.html
@@ -1,4 +1,4 @@
-<h3 *ngIf="userCount">Users playing: {{ userCount }}</h3>
+<h3 *ngIf="userCount">People playing: {{ userCount }}</h3>
 
 <ng-template [ngIf]="usernames">
   <div *ngFor="let username of usernames">
