Added additional scripts. Updated dependencies. Clean up chat timestamps. fixed issue #1

--- a/src/app/view/chat/chat.component.html
+++ b/src/app/view/chat/chat.component.html
@@ -13,8 +13,10 @@
     <div class="chat-values" #chatValues>
       <div *ngFor="let chat of chats">
         <b
-          >{{ chat.user.username }} <small class="text-mutes">({{ chat.user.family.name }})</small></b
-        >:&nbsp;{{ chat.value }} <span class="time-stamp"> - {{ chat.sendTime }}</span>
+          >{{ chat.user.username }}
+          <small class="text-mutes">({{ chat.user.family.name }})</small></b
+        >:&nbsp;{{ chat.value }}
+        <span class="time-stamp">{{ renderTimeAgo(chat) }}</span>
       </div>
     </div>
     <form class="chat-controls" (ngSubmit)="sendChat()">
