Adding CI and Fixing Tests

--- a/src/app/view/game/game.component.html
+++ b/src/app/view/game/game.component.html
@@ -1,22 +1,20 @@
-  <h4>How to play?</h4>
-  <p>
-    It is pretty easy. Open one of the sections below and start putting in your
-    guesses to the questions. If you start typing in any of the questions,
-    possible answers will be displayed. You can also type any answer you want.
-  </p>
-  <p>
-    When General Conference starts, some of the questions will lock and you will
-    no longer be able to put in guesses. If you guessed correctly, you will get
-    points. The person or team (also called a family) with the most points wins.
-    See your score down below.
-  </p>
-  <p>
-    <b>Pro Tip: </b>Some of the questions will still be open during sessions.
-    Example: You can change your answers if you see someone speak in an earlier
-    session and had previously guessed that person would speak in a later
-    session.
-  </p>
-
+<h4>How to play?</h4>
+<p>
+  It is pretty easy. Open one of the sections below and start putting in your
+  guesses to the questions. If you start typing in any of the questions,
+  possible answers will be displayed. You can also type any answer you want.
+</p>
+<p>
+  When General Conference starts, some of the questions will lock and you will
+  no longer be able to put in guesses. If you guessed correctly, you will get
+  points. The person or team (also called a family) with the most points wins.
+  See your score down below.
+</p>
+<p>
+  <b>Pro Tip: </b>Some of the questions will still be open during sessions.
+  Example: You can change your answers if you see someone speak in an earlier
+  session and had previously guessed that person would speak in a later session.
+</p>
 
 <div *ngIf="loading; else notLoading" class="d-flex justify-content-center">
   <div
