It's not pretty yet, but it works.
Next: I need to add user pictures.

--- a/src/app/view/nav-header/nav-header.component.html
+++ b/src/app/view/nav-header/nav-header.component.html
@@ -1,8 +1,10 @@
 <p>Fantasy General Conference</p>
 <div class="right-side">
-  <div class="authenticated-user">
-    <div class="username">{{ getUsername() }}</div>
-    <div class="family-name text-muted">{{ getFamilyName() }}</div>
-  </div>
-  <img src="assets/logo.png" />
+  <a (click)="logout()">
+    <div class="authenticated-user">
+      <div class="username">{{ getUsername() }}</div>
+      <div class="family-name text-muted">{{ getFamilyName() }}</div>
+    </div>
+    <img src="assets/logo.png" />
+  </a>
 </div>
