--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,6 @@
     {{ toast.message }}
   </ngb-toast>
 </div>
-<div class="h-100">
+<div class="h-100 container">
   <router-outlet></router-outlet>
 </div>
