--- a/src/app/nav-header/nav-header.component.scss
+++ b/src/app/nav-header/nav-header.component.scss
@@ -1,15 +1,36 @@
 :host {
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid black;
-  margin-bottom: 15px;
+  // border-bottom: 1px solid black;
+  margin-bottom: 16px;
+  padding-right: 16px;
+
+  background: linear-gradient(
+    270deg,
+    #5afaff,
+    #ffffff,
+    #ff96fd,
+    #7afcbb,
+    #ffb96f
+  );
+  background-size: 1000% 1000%;
+
+  animation: ScrollGradient 9s ease infinite;
+
+  @keyframes ScrollGradient {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
 }
 
-img {
-  max-height: 50px;
-}
-
-p {
+marquee {
   font-family: "Great Vibes", cursive;
   font-size: 36px;
 }
@@ -19,25 +40,7 @@ p {
   justify-content: space-between;
   align-items: center;
   cursor: pointer;
+}
 
-  .logout {
-    margin-right: 5px;
-  }
-
-  &:not(:hover) .logout {
-    display: none;
-  }
-
-  .authenticated-user {
-    margin-right: 5px;
-    text-align: center;
-
-    .username {
-      font-size: 25px;
-    }
-
-    .family-name {
-      font-size: 15px;
-    }
-  }
+.profile-picture {
 }
