--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -7,75 +7,115 @@
 </div>
 
 <ng-template #state>
-  <div *ngIf="isStateUnknown()"><p>Haven't met you before...</p></div>
-  <div *ngIf="isStateMetButUnauthenticated()"><p>You seem familiar...</p></div>
-  <div *ngIf="isStateKnown()"><p>Welcome back!</p></div>
-</ng-template>
-
-<div *ngIf="showRegisterUser; else showKnownUsers">
-  <form (ngSubmit)="registerUser()" novalidate>
-    <fieldset [disabled]="loading">
-      <div class="form-group">
-        <label for="name">Name</label>
-        <input
-          type="text"
-          class="form-control"
-          id="name"
-          name="name"
-          [(ngModel)]="name"
-          autocomplete="name"
-          placeholder="What should I call you?"
-        />
-        <small class="form-text text-muted"
-          ><app-valid-text
-            [valid]="nameValid()"
-            text="Must be 4 characters long."
-          ></app-valid-text>
-        </small>
-      </div>
-      <div class="form-group">
-        <label for="family">Family Name (Team Name)</label>
-        <input
-          type="search"
-          class="form-control"
-          id="family"
-          name="family"
-          [(ngModel)]="family"
-          placeholder="Who did you bring with you?"
-          autocomplete="off"
-          [ngbTypeahead]="searchFamilies"
-        />
-        <small class="form-text text-muted"
-          ><app-valid-text
-            [valid]="familyValid()"
-            text="Must be 4 characters long."
-          ></app-valid-text>
-        </small>
-      </div>
-      <button type="submit" class="btn btn-primary" [disabled]="!formValid()">
-        <span
-          *ngIf="loading"
-          class="spinner-border spinner-border-sm"
-          role="status"
-        ></span
-        >&nbsp;Start Playing
-      </button>
-    </fieldset>
-  </form>
-
-  <div *ngIf="authService.getUsers()?.length">
-    <a (click)="this.showRegisterUser = false">Login as existing user</a>
+  <div *ngIf="isStateUnknown()">
+    <p class="fade-in-0"><b>Welcome to Fantasy General Conference.</b></p>
+    <p class="fade-in-1">Here's how you play:</p>
+    <p class="fade-in-2">
+      It is pretty easy. Pick a name and your family name. Then you will guess
+      who is speaking and what color tie they will be wearing, etc.
+    </p>
+    <p class="fade-in-3">
+      When General Conference starts, some of the questions will lock and you
+      will no longer be able to put in guesses. If you guessed correctly, you
+      will get points. The person or family (also called a team) with the most
+      points wins.
+    </p>
+    <p class="fade-in-4">
+      <b>Pro Tip:&nbsp;</b>Some of the questions will still be open in between
+      sessions.
+    </p>
   </div>
-</div>
+  <div *ngIf="isStateMetButUnauthenticated()" class="fade-in-0">
+    <p class="fade-in-0">Welcome back!</p>
+  </div>
+  <div *ngIf="isStateKnown()" class="fade-in-0">
+    <p class="fade-in-0">Welcome back!</p>
+  </div>
 
-<ng-template #showKnownUsers>
-  <div *ngIf="authService.getUsers()?.length">
-    <div *ngFor="let user of authService.getUsers()">
-      <a (click)="login(user)"> {{ user?.name }} {{ user?.family?.name }} </a>
+  <div *ngIf="!showRegisterUser && isStateMetButUnauthenticated()">
+    <div
+      *ngIf="authService.getUsers()?.length"
+      class="fade-in-1 selectable-users"
+    >
+      <div *ngFor="let user of authService.getUsers()" class="user">
+        <a (click)="login(user)">
+          <img [src]="user?.profileImage || '/assets/profile.png'" />
+          <div class="user-name">{{ user?.name }}</div>
+          <div class="family-name">{{ user?.family?.name }}</div>
+        </a>
+      </div>
+    </div>
+
+    <div class="fade-in-2">
+      <a (click)="this.showRegisterUser = true">
+        <button type="button" class="btn btn-primary" [disabled]="loading">
+          Create new User
+        </button>
+      </a>
     </div>
   </div>
 
-  <div>
-    <a (click)="this.showRegisterUser = true">Create new User</a>
+  <div *ngIf="showRegisterUser" class="fade-in-1">
+    <form (ngSubmit)="registerUser()" novalidate>
+      <fieldset [disabled]="loading">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="name"
+            name="name"
+            [(ngModel)]="name"
+            autocomplete="name"
+            placeholder="What should I call you?"
+          />
+          <small class="form-text text-muted"
+            ><app-valid-text
+              [valid]="nameValid()"
+              text="Must be 4 characters long."
+            ></app-valid-text>
+          </small>
+        </div>
+        <div class="form-group">
+          <label for="family">Family Name (Team Name)</label>
+          <input
+            type="search"
+            class="form-control"
+            id="family"
+            name="family"
+            [(ngModel)]="family"
+            placeholder="Who did you bring with you?"
+            autocomplete="off"
+            [ngbTypeahead]="searchFamilies"
+          />
+          <small class="form-text text-muted"
+            ><app-valid-text
+              [valid]="familyValid()"
+              text="Must be 4 characters long."
+            ></app-valid-text>
+          </small>
+        </div>
+        <button
+          type="submit"
+          class="btn btn-primary"
+          [disabled]="!formValid() || loading"
+        >
+          <span
+            *ngIf="loading"
+            class="spinner-border spinner-border-sm"
+            role="status"
+          ></span
+          >&nbsp;Start Playing
+        </button>
+      </fieldset>
+    </form>
+
+    <div *ngIf="authService.getUsers()?.length" class="fade-in-2">
+      <a (click)="this.showRegisterUser = false">
+        <button type="button" class="btn btn-primary" [disabled]="loading">
+          Login as existing user
+        </button>
+      </a>
+    </div>
   </div>
 </ng-template>
