--- a/src/app/nav-header/nav-header.component.html
+++ b/src/app/nav-header/nav-header.component.html
@@ -37,6 +37,7 @@
           name="name"
           [(ngModel)]="name"
           autocomplete="name"
+          (change)="updateUser()"
         />
         <small class="form-text text-muted"
           ><app-valid-text
@@ -56,6 +57,7 @@
           [(ngModel)]="family"
           autocomplete="off"
           [ngbTypeahead]="searchFamilies"
+          (change)="updateUser()"
         />
         <small class="form-text text-muted"
           ><app-valid-text
