--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -1,7 +1,8 @@
 <label for="typeahead-basic">
   {{ text }}<br />
   <small
-    >Point value for each correct answer: {{ getPointValue() || "??" }} </small
+    >Point value for each correct answer: {{ getPointValue() || "??" }} (Average
+    winnings: {{ getAverageValue() }})</small
   >&nbsp;<br class="d-md-none" />
   <small>Maximum number of guesses: {{ countOfAnswers }}</small>
   <ng-template [ngIf]="isQuestionClosed()">
@@ -59,6 +60,14 @@
     <input
       type="number"
       [(ngModel)]="question.pointValue"
+      (change)="updateQuestion()"
+    />
+  </div>
+  <div>
+    Set Likely Number of Correct Answers:
+    <input
+      type="number"
+      [(ngModel)]="question.likelyCorrectCount"
       (change)="updateQuestion()"
     />
   </div>
